--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "parcel build src/main.js src/popup.html",
-    "start": "parcel src/popup.html --open"
+    "start": "parcel src/popup.html --open",
+    "build": "parcel build src/main.js src/popup.html --public-url ./",
+    "watch": "parcel watch src/main.js src/popup.html --public-url ./",
+    "prettier": "prettier --write *.{css,html,js,json,md,scss,yml} **/*.{css,html,js,json,md,scss,yml}"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   "homepage": "https://github.com/WillBooster/plantuml-visualizer",
   "devDependencies": {
     "parcel-bundler": "^1.12.3",
+    "prettier": "1.17.0",
     "renovate-config-exkazuu": "1.0.0"
   },
   "dependencies": {
