--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "node_modules/tsconfig-willbooster/tsconfig.json",
+  "extends": "./node_modules/tsconfig-willbooster/tsconfig.json",
   "include": ["src/**/*", "__tests__/**/*"]
 }
