--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "./node_modules/tsconfig-willbooster/tsconfig.json",
+  "compilerOptions": {
+    "typeRoots": ["./node_modules/@types", "./@types"]
+  },
   "include": ["src/**/*", "__tests__/**/*"]
 }
