--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
   "prettier": "prettier-config-willbooster",
   "dependencies": {
     "jquery": "3.4.0",
+    "pako": "1.0.10",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@types/chrome": "0.0.83",
+    "@types/jquery": "3.3.29",
+    "@types/pako": "1.0.1",
     "husky": "2.1.0",
     "lint-staged": "8.1.5",
     "parcel-bundler": "1.12.3",
