--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "main": "index.js",
   "scripts": {
     "build": "parcel build src/main.ts src/popup.html --public-url ./",
-    "prettier": "prettier --write **/*.{css,htm,html,js,json,md,scss,yml}",
-    "start": "parcel src/popup.html --open",
     "lint": "tslint -p . -t verbose",
     "lint-fix": "yarn lint --fix",
+    "prettier": "prettier --write **/*.{css,htm,html,js,json,md,scss,yml} && yarn sort-package-json",
+    "start": "parcel src/popup.html --open",
     "typecheck": "tsc --noEmit",
     "watch": "parcel watch src/main.ts src/popup.html --public-url ./"
   },
