--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "parcel build src/main.ts src/popup.html --public-url ./",
     "lint": "tslint -p . -t verbose",
     "lint-fix": "yarn lint --fix",
-    "prettier": "prettier --write **/*.{css,htm,html,js,json,md,scss,yml} && yarn sort-package-json",
+    "prettier": "prettier --write **/*.{css,htm,html,js,json,md,scss,yaml,yml} && yarn sort-package-json",
     "start": "parcel src/popup.html --open",
     "typecheck": "tsc --noEmit",
     "watch": "parcel watch src/main.ts src/popup.html --public-url ./"
