--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,31 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.0.1
+jobs:
+  build:
+    docker:
+      - image: circleci/node:lts
+    steps:
+      - checkout
+      - run:
+          name: Show environment information
+          command: |
+            echo "node: $(node -v)"
+            echo "yarn: $(yarn -v)"
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: Install dependencies
+          command: |
+            yarn config set cache-folder "$WERCKER_CACHE_DIR/yarn"
+            yarn install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - node_modules
+      - run:
+          name: Run typecheck
+          command: |
+            yarn typecheck
+      - run:
+          name: Run lint
+          command: |
+            yarn lint
