build: prepare for publishing this extension

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Project-speicific settings
+
+dist.zip
+
 # Created by https://www.gitignore.io/api/jetbrains
 # Edit at https://www.gitignore.io/?templates=jetbrains
 
