--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,20 @@
 {
   "manifest_version": 2,
-
   "name": "PlantUML Visualizer",
   "description": "A tool for visualizing PlantUML code.",
   "version": "1.0",
-
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-
-  "permissions": ["activeTab", "tabs"],
-
+  "permissions": ["activeTab", "tabs", "webRequest", "webRequestBlocking", "*://*/"],
+  "background": {
+    "scripts": ["background.js"]
+  },
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*"],
-      "js": ["main.js"]
+      "matches": ["https://github.com/*"],
+      "js": ["content_scripts.js"]
     }
   ]
 }
