--- a/package.json
+++ b/package.json
@@ -14,22 +14,20 @@
   "author": "WillBooster LLC",
   "main": "index.js",
   "scripts": {
-    "prebuild": "shx rm -Rf build && shx cp icon.png manifest.json dist/",
-    "build": "parcel build src/main.ts src/popup.html --public-url ./",
-    "package": "yarn build && zip -r dist.zip dist",
+    "prebuild": "shx rm -Rf dist && shx mkdir dist && shx cp icon.png manifest.json dist/",
+    "build": "parcel build src/content_scripts.ts src/background.ts src/popup.html --public-url ./",
     "lint": "tslint -p . -t verbose",
     "lint-fix": "yarn lint --fix",
-    "prettier": "prettier --write **/*.{css,htm,html,js,json,md,scss,yaml,yml} && yarn sort-package-json",
-    "start": "parcel src/popup.html --open",
+    "package": "yarn build && zip -r dist.zip dist",
+    "prettier": "prettier --write {*,**/*}.{css,htm,html,js,json,md,scss,yaml,yml} && yarn sort-package-json",
+    "start-popup": "parcel src/popup.html --open",
     "typecheck": "tsc --noEmit",
-    "watch": "yarn prebuild && parcel watch src/main.ts src/popup.html --public-url ./"
+    "watch": "yarn prebuild && parcel watch src/content_scripts.ts src/background.ts src/popup.html --public-url ./ --no-hmr"
   },
   "prettier": "prettier-config-willbooster",
   "dependencies": {
     "jquery": "3.4.1",
-    "pako": "1.0.10",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "pako": "1.0.10"
   },
   "devDependencies": {
     "@types/chrome": "0.0.83",
