--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "manifest_version": 2,
   "name": "PlantUML Visualizer",
   "description": "A tool for visualizing PlantUML code.",
-  "version": "1.0",
+  "version": "0.1",
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  "permissions": ["activeTab", "tabs", "webRequest", "webRequestBlocking", "*://*/"],
+  "permissions": ["activeTab", "tabs", "webRequest", "webRequestBlocking", "https://github.com/*"],
   "background": {
     "scripts": ["background.js"]
   },
