feat: add on/off switcher

--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "shx rm -Rf dist && shx mkdir dist && shx cp icon.png manifest.json dist/",
-    "build": "parcel build src/content_scripts.ts src/background.ts src/popup.html --public-url ./",
+    "build": "parcel build src/content_scripts.ts src/background.ts --public-url ./",
     "lint": "tslint -p . -t verbose",
     "lint-fix": "yarn lint --fix",
     "package": "yarn build && shx rm -f dist.zip && zip -r dist.zip dist",
     "prettier": "prettier --write {*,**/*}.{css,htm,html,js,json,md,scss,yaml,yml} && yarn sort-package-json",
     "start-popup": "parcel src/popup.html --open",
     "typecheck": "tsc --noEmit",
-    "watch": "yarn prebuild && parcel watch src/content_scripts.ts src/background.ts src/popup.html --public-url ./ --no-hmr"
+    "watch": "yarn prebuild && parcel watch src/content_scripts.ts src/background.ts --public-url ./ --no-hmr"
   },
   "prettier": "prettier-config-willbooster",
   "dependencies": {
