--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,7 @@
   "description": "A tool for visualizing PlantUML code.",
   "version": "0.1.1",
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_icon": "icon.png"
   },
   "permissions": ["activeTab", "tabs", "webRequest", "webRequestBlocking", "https://github.com/*"],
   "background": {
