--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "parcel build src/content_scripts.ts src/background.ts --public-url ./",
     "lint": "tslint -p . -t verbose",
     "lint-fix": "yarn lint --fix",
-    "package": "yarn build && shx rm -f dist.zip && zip -r dist.zip dist",
+    "package": "yarn build && shx rm -f src.zip dist.zip && yarn pack && zip -r dist.zip dist",
     "prettier": "prettier --write {*,**/*}.{css,htm,html,js,json,md,scss,yaml,yml} && yarn sort-package-json",
     "start-popup": "parcel src/popup.html --open",
     "typecheck": "tsc --noEmit",
