perf: optimize code (#76)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "yarn lint --fix",
     "package": "yarn build && shx rm -f src.zip dist.zip && yarn pack && zip -r dist.zip dist",
-    "prettier": "prettier --write {*,**/*}.{css,htm,html,js,json,md,scss,yaml,yml} && yarn sort-package-json",
+    "prettier": "prettier --write {,*/}**/*.{css,htm,html,js,json,md,scss,yaml,yml}",
     "start-popup": "parcel src/popup.html --open",
     "typecheck": "tsc --noEmit",
     "watch": "yarn prebuild && parcel watch src/content_scripts.ts src/background.ts --public-url ./ --no-hmr"
@@ -36,12 +36,13 @@
     "@types/pako": "1.0.1",
     "@typescript-eslint/eslint-plugin": "1.11.0",
     "@typescript-eslint/parser": "1.11.0",
-    "@willbooster/eslint-config": "0.0.10",
-    "@willbooster/prettier-config": "0.0.10",
-    "@willbooster/renovate-config": "0.0.10",
-    "@willbooster/tsconfig": "0.0.10",
+    "@willbooster/eslint-config": "0.0.11",
+    "@willbooster/prettier-config": "0.0.11",
+    "@willbooster/renovate-config": "0.0.11",
+    "@willbooster/tsconfig": "0.0.11",
     "eslint": "6.0.1",
     "eslint-config-prettier": "5.0.0",
+    "eslint-plugin-import": "2.18.0",
     "eslint-plugin-prettier": "3.1.0",
     "husky": "2.5.0",
     "lint-staged": "8.2.1",
