--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "format": "yarn lint-fix && yarn prettier && yarn sort-package-json",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "yarn lint --fix",
-    "package": "yarn build && shx rm -f src.zip dist.zip && yarn pack && zip -r dist.zip dist",
+    "package": "yarn build && shx rm -f src.zip dist.zip && yarn pack && bestzip dist.zip dist/",
     "prettier": "prettier --write {,*/}**/*.{css,htm,html,json,md,scss,yaml,yml}",
     "start-popup": "parcel src/popup.html --open",
     "typecheck": "tsc --noEmit",
@@ -38,6 +38,7 @@
     "@willbooster/prettier-config": "0.0.13",
     "@willbooster/renovate-config": "0.0.13",
     "@willbooster/tsconfig": "0.0.13",
+    "bestzip": "2.1.4",
     "husky": "2.6.0",
     "lint-staged": "8.2.1",
     "parcel-bundler": "1.12.3",
