--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "WillBooster LLC",
   "main": "index.js",
   "scripts": {
-    "prebuild": "shx rm -Rf dist && shx mkdir dist && shx cp icon.png manifest.json dist/",
+    "prebuild": "shx rm -Rf dist && shx mkdir dist && shx cp -r icon manifest.json dist/",
     "build": "parcel build src/content_scripts.ts src/background.ts --public-url ./",
     "format": "yarn lint-fix && yarn prettier && yarn sort-package-json",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
