--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,12 @@
   "description": "A tool for visualizing PlantUML code.",
   "version": "1.1.1",
   "browser_action": {
-    "default_icon": "icon.png"
+    "default_icon": "icon/icon16.png"
+  },
+  "icons": {
+    "16": "icon/icon16.png",
+    "48": "icon/icon48.png",
+    "128": "icon/icon128.png"
   },
   "permissions": [
     "activeTab",
