--- a/package.json
+++ b/package.json
@@ -28,20 +28,28 @@
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
     "jquery": "3.4.1",
-    "pako": "1.0.10"
+    "pako": "1.0.10",
+    "tslib": "1.10.0"
   },
   "devDependencies": {
     "@types/chrome": "0.0.88",
     "@types/jquery": "3.3.31",
     "@types/pako": "1.0.1",
-    "@willbooster/eslint-config": "0.1.0",
+    "@typescript-eslint/eslint-plugin": "1.13.0",
+    "@typescript-eslint/parser": "1.13.0",
+    "@willbooster/eslint-config": "0.1.1",
     "@willbooster/prettier-config": "0.1.1",
     "@willbooster/renovate-config": "0.1.0",
     "@willbooster/tsconfig": "0.1.3",
     "bestzip": "2.1.4",
+    "eslint": "6.1.0",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-prettier": "3.1.0",
     "husky": "3.0.3",
     "lint-staged": "9.2.1",
     "parcel-bundler": "1.12.3",
+    "prettier": "1.18.2",
     "shx": "0.3.2",
     "sort-package-json": "1.22.1",
     "typescript": "3.5.3"
