build: create two packages for Chrome and Firefox

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "shx rm -Rf dist && shx mkdir dist && shx cp -r icon manifest.json dist/",
-    "build": "parcel build src/content_scripts.ts src/background.ts --public-url ./ --no-minify",
+    "build": "parcel build src/content_scripts.ts src/background.ts --public-url ./",
     "format": "yarn lint-fix && yarn prettier && yarn sort-package-json",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "yarn lint --fix",
-    "package": "yarn build && shx rm -f src.zip dist.zip && yarn pack && cd dist && bestzip ../dist.zip *",
+    "package": "shx rm -f plantuml-visualizer-v*.tgz dist-*.zip && yarn pack && yarn package-chrom && yarn package-ff",
+    "package-chrom": "yarn build --no-minify && cd dist && bestzip ../dist-chrome.zip *",
+    "package-ff": "yarn build && cd dist && bestzip ../dist-ff.zip *",
     "prettier": "prettier --write {,*/}**/*.{css,htm,html,json,md,scss,yaml,yml}",
     "start-popup": "parcel src/popup.html --open",
     "typecheck": "tsc --noEmit",
