--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "scripts": {
     "prebuild": "shx rm -Rf dist && shx mkdir dist && shx cp -r icon manifest.json dist/",
     "build": "parcel build src/content_scripts.ts src/background.ts --public-url ./",
+    "build-webpack": "yarn prebuild && webpack --config webpack.config --mode production",
     "format": "yarn lint-fix && yarn prettier && yarn sort-package-json",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "yarn lint --fix",
     "package": "shx rm -f plantuml-visualizer-v*.tgz dist-*.zip && yarn pack && yarn package-chrom && yarn package-ff",
-    "package-chrom": "yarn build --no-minify && cd dist && bestzip ../dist-chrome.zip *",
+    "package-chrom": "yarn prebuild && webpack --config webpack.config --mode production && cd dist && bestzip ../dist-chrome.zip *",
     "package-ff": "yarn build && cd dist && bestzip ../dist-ff.zip *",
     "prettier": "prettier --write {,*/}**/*.{css,htm,html,json,md,scss,yaml,yml}",
     "start-popup": "parcel src/popup.html --open",
@@ -31,7 +32,8 @@
   "dependencies": {
     "jquery": "3.4.1",
     "pako": "1.0.10",
-    "tslib": "1.10.0"
+    "tslib": "1.10.0",
+    "zlib.es": "0.6.0"
   },
   "devDependencies": {
     "@types/chrome": "0.0.88",
@@ -44,16 +46,21 @@
     "@willbooster/renovate-config": "0.1.0",
     "@willbooster/tsconfig": "0.1.3",
     "bestzip": "2.1.4",
+    "closure-webpack-plugin": "2.0.1",
     "eslint": "6.3.0",
     "eslint-config-prettier": "6.2.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.0",
+    "google-closure-compiler": "20190819.0.0",
     "husky": "3.0.5",
     "lint-staged": "9.2.5",
     "parcel-bundler": "1.12.3",
     "prettier": "1.18.2",
     "shx": "0.3.2",
     "sort-package-json": "1.22.1",
-    "typescript": "3.6.2"
+    "ts-loader": "6.0.4",
+    "typescript": "3.6.2",
+    "webpack": "4.39.3",
+    "webpack-cli": "3.3.8"
   }
 }
