--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "./node_modules/@willbooster/tsconfig/tsconfig.json",
   "compilerOptions": {
+    "target": "es2017",
     "typeRoots": ["./node_modules/@types", "./@types"]
   },
   "include": ["src/**/*", "__tests__/**/*"]
