--- a/package.json
+++ b/package.json
@@ -14,31 +14,24 @@
   "author": "WillBooster LLC",
   "main": "index.js",
   "scripts": {
-    "prebuild": "shx rm -Rf dist && shx mkdir dist && shx cp -r icon manifest.json dist/",
-    "build": "parcel build src/content_scripts.ts src/background.ts --public-url ./",
-    "build-webpack": "yarn prebuild && webpack --config webpack.config --mode production",
+    "build": "shx rm -Rf dist && tsc && rollup -c",
+    "postbuild": "shx cp -r icon manifest.json dist/esm/",
     "format": "yarn lint-fix && yarn prettier && yarn sort-package-json",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "yarn lint --fix",
-    "package": "shx rm -f plantuml-visualizer-v*.tgz dist-*.zip && yarn pack && yarn package-chrom && yarn package-ff",
-    "package-chrom": "yarn prebuild && webpack --config webpack.config --mode production && cd dist && bestzip ../dist-chrome.zip *",
-    "package-ff": "yarn build && cd dist && bestzip ../dist-ff.zip *",
+    "package": "shx rm -f plantuml-visualizer-v*.tgz dist-*.zip && yarn pack && yarn build && cd dist/esm && bestzip ../../dist.zip *",
     "prettier": "prettier --write {,*/}**/*.{css,htm,html,js,json,md,scss,yaml,yml}",
-    "start-popup": "parcel src/popup.html --open",
-    "typecheck": "tsc --noEmit",
-    "watch": "yarn prebuild && parcel watch src/content_scripts.ts src/background.ts --public-url ./ --no-hmr"
+    "typecheck": "tsc --noEmit"
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
     "jquery": "3.4.1",
-    "pako": "1.0.10",
     "tslib": "1.10.0",
     "zlib.es": "0.6.0"
   },
   "devDependencies": {
     "@types/chrome": "0.0.88",
     "@types/jquery": "3.3.31",
-    "@types/pako": "1.0.1",
     "@typescript-eslint/eslint-plugin": "2.1.0",
     "@typescript-eslint/parser": "2.1.0",
     "@willbooster/eslint-config": "0.1.1",
@@ -46,21 +39,18 @@
     "@willbooster/renovate-config": "0.1.0",
     "@willbooster/tsconfig": "0.1.3",
     "bestzip": "2.1.4",
-    "closure-webpack-plugin": "2.0.1",
     "eslint": "6.3.0",
     "eslint-config-prettier": "6.2.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-prettier": "3.1.0",
-    "google-closure-compiler": "20190819.0.0",
     "husky": "3.0.5",
     "lint-staged": "9.2.5",
-    "parcel-bundler": "1.12.3",
     "prettier": "1.18.2",
+    "rollup": "1.21.0",
+    "rollup-plugin-commonjs": "10.1.0",
+    "rollup-plugin-node-resolve": "5.2.0",
     "shx": "0.3.2",
     "sort-package-json": "1.22.1",
-    "ts-loader": "6.0.4",
-    "typescript": "3.6.2",
-    "webpack": "4.39.3",
-    "webpack-cli": "3.3.8"
+    "typescript": "3.6.2"
   }
 }
