feat: employ google-closure-compiler to optimize code

--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
   "author": "WillBooster LLC",
   "main": "index.js",
   "scripts": {
-    "build": "shx rm -Rf dist && tsc && rollup -c",
-    "postbuild": "shx cp -r icon manifest.json dist/esm/",
+    "build": "cross-env NODE_ENV=development yarn build-common",
+    "build-prod": "cross-env NODE_ENV=production yarn build-common",
+    "build-common": "shx rm -Rf dist && tsc && rollup -c && shx cp -r icon manifest.json dist/esm/",
     "format": "yarn lint-fix && yarn prettier && yarn sort-package-json",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "yarn lint --fix",
-    "package": "shx rm -f plantuml-visualizer-v*.tgz dist-*.zip && yarn pack && yarn build && cd dist/esm && bestzip ../../dist.zip *",
+    "package": "shx rm -f plantuml-visualizer-v*.tgz dist-*.zip && yarn pack && yarn build-prod && cd dist/esm && bestzip ../../dist.zip *",
     "prettier": "prettier --write {,*/}**/*.{css,htm,html,js,json,md,scss,yaml,yml}",
     "typecheck": "tsc --noEmit"
   },
@@ -39,6 +40,7 @@
     "@willbooster/renovate-config": "0.1.0",
     "@willbooster/tsconfig": "0.1.3",
     "bestzip": "2.1.4",
+    "cross-env": "5.2.1",
     "eslint": "6.3.0",
     "eslint-config-prettier": "6.3.0",
     "eslint-plugin-import": "2.18.2",
@@ -47,6 +49,7 @@
     "lint-staged": "9.2.5",
     "prettier": "1.18.2",
     "rollup": "1.21.2",
+    "rollup-plugin-closure-compile": "1.1.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "shx": "0.3.2",
