--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "plantuml-visualizer",
   "version": "1.3.0",
+  "private": true,
   "description": "A Chrome / Firefox extension for visualizing PlantUML code.",
   "homepage": "https://github.com/WillBooster/plantuml-visualizer",
   "bugs": {
