--- a/.releaserc.json
+++ b/.releaserc.json
@@ -11,6 +11,14 @@
         "asset": "dist.zip",
         "extensionId": "ffaloebcmkogfdkemcekamlmfkkmgkcf"
       }
+    ],
+    [
+      "semantic-release-firefox",
+      {
+        "xpiPath": "",
+        "distFolder": "dist",
+        "addOnSlug": "plantuml-visualizer"
+      }
     ]
   ]
 }
