--- a/package.json
+++ b/package.json
@@ -15,18 +15,17 @@
   "author": "WillBooster LLC",
   "main": "index.js",
   "scripts": {
-    "build": "yarn build-dev",
+    "build": "cross-env NODE_ENV=production yarn build-common",
     "build-common": "yarn recreate-dist && rollup -c",
-    "build-dev": "cross-env NODE_ENV=development yarn build-common",
-    "build-prod": "cross-env NODE_ENV=production yarn build-common",
     "format": "yarn lint-fix && yarn prettier && yarn sort-package-json",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "yarn lint --fix",
-    "package": "shx rm -f plantuml-visualizer-v*.tgz dist-*.zip && yarn pack && yarn build-prod && cd dist && bestzip ../dist.zip *",
+    "package": "shx rm -f plantuml-visualizer-v*.tgz dist-*.zip && yarn pack && yarn build && cd dist && bestzip ../dist.zip *",
     "prettier": "prettier --write {,*/}**/*.{css,htm,html,js,json,md,scss,yaml,yml}",
     "recreate-dist": "shx rm -Rf dist && shx mkdir dist && shx cp -r icon manifest.json dist/",
-    "typecheck": "tsc --noEmit",
-    "watch": "yarn build -w"
+    "release-test": "dotenv yarn semantic-release -d",
+    "start": "cross-env NODE_ENV=development yarn build-common -w",
+    "typecheck": "tsc --noEmit"
   },
   "prettier": "@willbooster/prettier-config",
   "dependencies": {
@@ -44,6 +43,7 @@
     "@willbooster/tsconfig": "1.0.0",
     "bestzip": "2.1.4",
     "cross-env": "6.0.0",
+    "dotenv-cli": "2.0.1",
     "eslint": "6.5.1",
     "eslint-config-prettier": "6.3.0",
     "eslint-plugin-import": "2.18.2",
@@ -56,6 +56,9 @@
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-typescript2": "0.24.3",
+    "semantic-release": "15.13.24",
+    "semantic-release-chrome": "1.1.1",
+    "semantic-release-firefox": "1.2.0",
     "shx": "0.3.2",
     "sort-package-json": "1.22.1",
     "typescript": "3.6.3"
