--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,12 @@ commands:
     steps:
       - restore_cache:
           key: yarn-packages-{{ checksum "yarn.lock" }}
-
+  install-deps:
+    steps:
+      - run:
+          name: Install dependencies
+          command: |
+            yarn install
   save-deps:
     steps:
       - save_cache:
@@ -27,10 +32,7 @@ jobs:
             echo "node: $(node -v)"
             echo "yarn: $(yarn -v)"
       - restore-deps
-      - run:
-          name: Install dependencies
-          command: |
-            yarn install
+      - install-deps
       - save-deps
       - run:
           name: Run typecheck
@@ -46,6 +48,7 @@ jobs:
     steps:
       - checkout
       - restore-deps
+      - install-deps
       - run:
           name: Release
           command: yarn run semantic-release || true
