--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "PlantUML Visualizer",
   "description": "A Chrome / Firefox extension for visualizing PlantUML descriptions.",
-  "version": "1.3.0",
+  "version": "0.0.0-development",
   "browser_action": {
     "default_icon": "icon/icon16.png"
   },
