--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -14,6 +14,6 @@ update_configs:
           dependency_type: 'production'
           update_type: 'semver:minor'
     commit_message:
-      prefix: 'fix'
+      prefix: 'chore'
       prefix_development: 'chore'
       include_scope: true
