--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "rollup-plugin-typescript2": "0.24.3",
     "semantic-release": "15.13.24",
     "semantic-release-chrome": "exKAZUu/semantic-release-chrome",
-    "semantic-release-firefox": "1.2.0",
+    "semantic-release-firefox": "exKAZUu/semantic-release-firefox",
     "shx": "0.3.2",
     "sort-package-json": "1.22.1",
     "typescript": "3.6.4"
