Revert "fix: disable semantic-release-firefox temporally"
This reverts commit 551dc6c32a280d74d107db0b54d9ea5dc442ea7e.

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -10,6 +10,14 @@
         "asset": "dist.zip",
         "extensionId": "ffaloebcmkogfdkemcekamlmfkkmgkcf"
       }
+    ],
+    [
+      "semantic-release-firefox",
+      {
+        "xpiPath": "dist.xpi",
+        "distFolder": "dist",
+        "addOnSlug": "plantuml-visualizer"
+      }
     ]
   ]
 }
