--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,5 @@
 {
-  "./{src,__tests__}/**/*.{js,jsx,ts,tsx}": ["eslint --fix", "git add"],
-  "./**/*.{css,htm,html,json,md,scss,yaml,yml}": ["prettier --write", "git add"]
+  "./{packages/*/,}{src,__tests__}/**/*.{ts,tsx}": ["eslint --fix", "git add"],
+  "./**/*.{css,htm,html,js,json,jsx,md,scss,yaml,yml}": ["prettier --write", "git add"],
+  "./**/package.json": ["sort-package-json", "git add"]
 }
