--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production yarn build-common",
     "build-common": "yarn recreate-dist && rollup -c",
-    "format": "yarn lint-fix && yarn prettier && yarn sort-package-json",
+    "format": "yarn prettier && yarn sort-package-json && yarn lint-fix",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "yarn lint --fix",
     "package": "shx rm -f plantuml-visualizer-v*.tgz dist-*.zip && yarn pack && yarn build && cd dist && bestzip ../dist.zip *",
-    "prettier": "prettier --write {,*/}**/*.{css,htm,html,js,json,md,scss,yaml,yml}",
+    "prettier": "prettier --write \"**/{.*/,}*.{css,htm,html,js,json,jsx,md,scss,ts,tsx,yaml,yml}\"",
     "recreate-dist": "shx rm -Rf dist && shx mkdir dist && shx cp -r icon manifest.json dist/",
     "release-test": "dotenv yarn semantic-release -d",
+    "sort-package-json": "sort-package-json",
     "start": "cross-env NODE_ENV=development yarn build-common -w",
     "typecheck": "tsc --noEmit"
   },
@@ -39,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "2.7.0",
     "@typescript-eslint/parser": "2.7.0",
     "@willbooster/eslint-config": "1.0.0",
+    "@willbooster/eslint-config-ts": "2.0.0",
     "@willbooster/prettier-config": "2.0.0",
     "@willbooster/tsconfig": "2.0.0",
     "bestzip": "2.1.5",
