chore(deps): use official semantic-release-chrome upgrading all dependencies

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@willbooster/eslint-config-ts": "2.3.0",
     "@willbooster/prettier-config": "2.3.0",
     "@willbooster/renovate-config": "2.3.0",
-    "@willbooster/tsconfig": "2.1.0",
+    "@willbooster/tsconfig": "2.3.0",
     "bestzip": "2.1.5",
     "cross-env": "6.0.3",
     "dotenv-cli": "3.1.0",
@@ -60,7 +60,7 @@
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-typescript2": "0.25.3",
     "semantic-release": "15.13.31",
-    "semantic-release-chrome": "exKAZUu/semantic-release-chrome",
+    "semantic-release-chrome": "1.1.3",
     "semantic-release-firefox": "exKAZUu/semantic-release-firefox",
     "shx": "0.3.2",
     "sort-package-json": "1.30.0",
