--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - run:
           name: Release
           command: |
-            yarn install --production=false --frozen-lockfile && ls -al node_modules && yarn run semantic-release
+            rm -Rf node_modules && yarn install --production=false --frozen-lockfile && ls -al node_modules && yarn run semantic-release
 workflows:
   build-and-deploy:
     jobs:
